Added newest version of Full nonlinear

--- a/3d_Plasticity.ipynb
+++ b/3d_Plasticity.ipynb
@@ -179,22 +179,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Shape mismatch between conditional branches.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mplastic_problem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minit_nonlinear_problem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m plastic_problem\u001b[38;5;241m.\u001b[39minit_non_linear_solver(bcs)\n",
-      "File \u001b[0;32m~/2.077-Fenicsx-Plasticity/ElasticPlasticity/Plasticity_Problem.py:158\u001b[0m, in \u001b[0;36mPlastic_Problem_Def.init_nonlinear_problem\u001b[0;34m(self, bc_neumann)\u001b[0m\n\u001b[1;32m    156\u001b[0m Stress_eff \u001b[38;5;241m=\u001b[39m dev(Stress)  \u001b[38;5;66;03m# - self.mat.C * A\u001b[39;00m\n\u001b[1;32m    157\u001b[0m Stress_VM \u001b[38;5;241m=\u001b[39m normVM(Stress_eff)\n\u001b[0;32m--> 158\u001b[0m N_p \u001b[38;5;241m=\u001b[39m \u001b[43mconditional\u001b[49m\u001b[43m(\u001b[49m\u001b[43meq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mStress_VM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msqrt\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mStress_eff\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mStress_VM\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    160\u001b[0m f \u001b[38;5;241m=\u001b[39m Stress_VM \u001b[38;5;241m-\u001b[39m Y  \u001b[38;5;66;03m# Relation\u001b[39;00m\n\u001b[1;32m    162\u001b[0m d_Y \u001b[38;5;241m=\u001b[39m Y \u001b[38;5;241m-\u001b[39m Y0  \u001b[38;5;66;03m# change in Y\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/ufl/operators.py:462\u001b[0m, in \u001b[0;36mconditional\u001b[0;34m(condition, true_value, false_value)\u001b[0m\n\u001b[1;32m    456\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconditional\u001b[39m(condition, true_value, false_value):\n\u001b[1;32m    457\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"A conditional expression.\u001b[39;00m\n\u001b[1;32m    458\u001b[0m \n\u001b[1;32m    459\u001b[0m \u001b[38;5;124;03m    This takes the value of true_value\u001b[39;00m\n\u001b[1;32m    460\u001b[0m \u001b[38;5;124;03m    when condition evaluates to true and false_value otherwise.\u001b[39;00m\n\u001b[1;32m    461\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 462\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mConditional\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcondition\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrue_value\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfalse_value\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/ufl/conditional.py:276\u001b[0m, in \u001b[0;36mConditional.__init__\u001b[0;34m(self, condition, true_value, false_value)\u001b[0m\n\u001b[1;32m    274\u001b[0m fsh \u001b[38;5;241m=\u001b[39m false_value\u001b[38;5;241m.\u001b[39mufl_shape\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tsh \u001b[38;5;241m!=\u001b[39m fsh:\n\u001b[0;32m--> 276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape mismatch between conditional branches.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    277\u001b[0m tfi \u001b[38;5;241m=\u001b[39m true_value\u001b[38;5;241m.\u001b[39mufl_free_indices\n\u001b[1;32m    278\u001b[0m ffi \u001b[38;5;241m=\u001b[39m false_value\u001b[38;5;241m.\u001b[39mufl_free_indices\n",
-      "\u001b[0;31mValueError\u001b[0m: Shape mismatch between conditional branches."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plastic_problem.init_nonlinear_problem()\n",
     "plastic_problem.init_non_linear_solver(bcs)"
@@ -209,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,15 +217,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#saver = Problem_Saver(plastic_problem,problem_name)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,51 +243,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-11 05:11:33.073 (   2.476s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
-      "2023-12-11 05:11:34.360 (   3.764s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
-      "2023-12-11 05:11:35.209 (   4.613s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 2: r (abs) = 8.91571e-13 (tol = 1e-08) r (rel) = 1.10756e-16(tol = 1e-08)\n",
-      "2023-12-11 05:11:35.209 (   4.613s) [main            ]       NewtonSolver.cpp:250   INFO| Newton solver finished in 2 iterations and 2 linear solver iterations.\n",
-      "2023-12-11 05:11:35.217 (   4.621s) [main            ]    SparsityPattern.cpp:384   INFO| Column ghost size increased from 0 to 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Residual: 2598.9886433986085\n",
-      "Stop Plastic Step  Done\n",
-      "2598.9886433986085\n",
-      "Increment: 2\n",
-      "Starting Plastic Step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-11 05:11:35.425 (   4.829s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
-      "2023-12-11 05:11:36.459 (   5.863s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
-      "2023-12-11 05:11:37.309 (   6.709s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 2: r (abs) = 5.43276e-15 (tol = 1e-08) r (rel) = 3.43556e-15(tol = 1e-08)\n",
-      "2023-12-11 05:11:37.309 (   6.709s) [main            ]       NewtonSolver.cpp:250   INFO| Newton solver finished in 2 iterations and 2 linear solver iterations.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Residual: 5197.9772867972215\n",
-      "Stop Plastic Step  Done\n",
-      "5197.9772867972215\n",
-      "Increment: 3\n",
-      "Starting Plastic Step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-11 05:11:37.317 (   6.718s) [main            ]    SparsityPattern.cpp:384   INFO| Column ghost size increased from 0 to 0\n",
-      "2023-12-11 05:11:37.525 (   6.926s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n"
+      "2023-12-11 05:21:02.777 (   1.099s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:04.242 (   2.565s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:05.175 (   3.498s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 2: r (abs) = 0.566334 (tol = 1e-08) r (rel) = 7.03534e-05(tol = 1e-08)\n",
+      "2023-12-11 05:21:05.379 (   3.702s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:06.289 (   4.611s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 3: r (abs) = 1241.84 (tol = 1e-08) r (rel) = 0.154269(tol = 1e-08)\n",
+      "2023-12-11 05:21:06.490 (   4.812s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:07.323 (   5.644s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 4: r (abs) = 1241.82 (tol = 1e-08) r (rel) = 0.154266(tol = 1e-08)\n",
+      "2023-12-11 05:21:07.528 (   5.849s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:08.360 (   6.681s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 5: r (abs) = 1.5758 (tol = 1e-08) r (rel) = 0.000195756(tol = 1e-08)\n",
+      "2023-12-11 05:21:08.566 (   6.887s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:09.411 (   7.732s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 6: r (abs) = 13.4003 (tol = 1e-08) r (rel) = 0.00166466(tol = 1e-08)\n",
+      "2023-12-11 05:21:09.618 (   7.939s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:10.458 (   8.779s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 7: r (abs) = 14.0484 (tol = 1e-08) r (rel) = 0.00174517(tol = 1e-08)\n",
+      "2023-12-11 05:21:10.669 (   8.989s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:11.506 (   9.827s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 8: r (abs) = 5.81031 (tol = 1e-08) r (rel) = 0.000721792(tol = 1e-08)\n",
+      "2023-12-11 05:21:11.704 (  10.025s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:12.528 (  10.849s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 9: r (abs) = 4.58733 (tol = 1e-08) r (rel) = 0.000569865(tol = 1e-08)\n",
+      "2023-12-11 05:21:12.731 (  11.051s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n",
+      "2023-12-11 05:21:13.582 (  11.903s) [main            ]       NewtonSolver.cpp:36    INFO| Newton iteration 10: r (abs) = 2.1294 (tol = 1e-08) r (rel) = 0.000264527(tol = 1e-08)\n",
+      "2023-12-11 05:21:13.782 (  12.103s) [main            ]              petsc.cpp:698   INFO| PETSc Krylov solver starting to solve system.\n"
      ]
     },
     {
@@ -322,7 +273,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[9], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m niter \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting Plastic Step\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 24\u001b[0m \u001b[43mplastic_problem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve_nls\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStop Plastic Step  Done\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# print(\"Linear Step 2 Start\")\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#plastic_problem.solve_linear(bcs) #Solves for the actual displacement after the plastic update\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# print(\"Linear Step 2 Done\")\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m#vec1 = fem.assemble_vector(fem.form(plastic_problem.res_p))\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m#print(plastic_problem.du.x.array)\u001b[39;00m\n",
-      "File \u001b[0;32m~/2.077-Fenicsx-Plasticity/ElasticPlasticity/Plasticity_Problem.py:230\u001b[0m, in \u001b[0;36mPlastic_Problem_Def.solve_nls\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msolve_nls\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 230\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnls_solver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    232\u001b[0m     vec1 \u001b[38;5;241m=\u001b[39m fem\u001b[38;5;241m.\u001b[39massemble_vector(fem\u001b[38;5;241m.\u001b[39mform(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRes))\n\u001b[1;32m    234\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResidual: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvec1\u001b[38;5;241m.\u001b[39mnorm()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/2.077-Fenicsx-Plasticity/ElasticPlasticity/Plasticity_Problem.py:232\u001b[0m, in \u001b[0;36mPlastic_Problem_Def.solve_nls\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    231\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msolve_nls\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 232\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnls_solver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    234\u001b[0m     vec1 \u001b[38;5;241m=\u001b[39m fem\u001b[38;5;241m.\u001b[39massemble_vector(fem\u001b[38;5;241m.\u001b[39mform(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRes))\n\u001b[1;32m    236\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResidual: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvec1\u001b[38;5;241m.\u001b[39mnorm()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.10/dist-packages/dolfinx/nls/petsc.py:46\u001b[0m, in \u001b[0;36mNewtonSolver.solve\u001b[0;34m(self, u)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msolve\u001b[39m(\u001b[38;5;28mself\u001b[39m, u: fem\u001b[38;5;241m.\u001b[39mFunction):\n\u001b[1;32m     44\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Solve non-linear problem into function u. Returns the number\u001b[39;00m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;124;03m    of iterations and if the solver converged.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m     n, converged \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     47\u001b[0m     u\u001b[38;5;241m.\u001b[39mx\u001b[38;5;241m.\u001b[39mscatter_forward()\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m n, converged\n",
       "File \u001b[0;32m/usr/local/dolfinx-real/lib/python3.10/dist-packages/dolfinx/fem/petsc.py:740\u001b[0m, in \u001b[0;36mNonlinearProblem.form\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    737\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Compiled bilinear form (the Jacobian form)\"\"\"\u001b[39;00m\n\u001b[1;32m    738\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_a\n\u001b[0;32m--> 740\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mform\u001b[39m(\u001b[38;5;28mself\u001b[39m, x: PETSc\u001b[38;5;241m.\u001b[39mVec) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    741\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"This function is called before the residual or Jacobian is\u001b[39;00m\n\u001b[1;32m    742\u001b[0m \u001b[38;5;124;03m    computed. This is usually used to update ghost values.\u001b[39;00m\n\u001b[1;32m    743\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    746\u001b[0m \n\u001b[1;32m    747\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    748\u001b[0m     x\u001b[38;5;241m.\u001b[39mghostUpdate(addv\u001b[38;5;241m=\u001b[39mPETSc\u001b[38;5;241m.\u001b[39mInsertMode\u001b[38;5;241m.\u001b[39mINSERT, mode\u001b[38;5;241m=\u001b[39mPETSc\u001b[38;5;241m.\u001b[39mScatterMode\u001b[38;5;241m.\u001b[39mFORWARD)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
