More changes to Plasticity Codes

--- a/3d_Plasticity_Bending.ipynb
+++ b/3d_Plasticity_Bending.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "# Study parameters\n",
     "stud = {\"deg_u\" : 1,    # Interpolation of u\n",
-    "        \"deg_stress\" : 2,  # Interpolation of sig, eps, p\n",
+    "        \"deg_strain_quad\" : 2,  # Interpolation of sig, eps, p\n",
     "        }\n",
     "\n",
     "load_steps  = {\n",
@@ -127,7 +127,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Plastic_Problem_Def.__init__() got an unexpected keyword argument 'deg_stress'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m mat \u001b[38;5;241m=\u001b[39m Plastic_Material(domain \u001b[38;5;241m=\u001b[39m domain,\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmech)\n\u001b[0;32m----> 2\u001b[0m plastic_problem \u001b[38;5;241m=\u001b[39m \u001b[43mPlastic_Problem_Def\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdomain\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmat\u001b[49m\u001b[43m,\u001b[49m\u001b[43mfacet_tags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfacet_tag\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstud\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Plastic_Problem_Def.__init__() got an unexpected keyword argument 'deg_stress'"
+     ]
+    }
+   ],
    "source": [
     "mat = Plastic_Material(domain = domain,**mech)\n",
     "plastic_problem = Plastic_Problem_Def(domain,mat,facet_tags=facet_tag,**stud)"
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
